@@ -1,5 +1,12 @@
 2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/procdialogs.c: (create_proc_field_page):
+	* src/procman.c: (procman_get_tree_state),
+	(procman_save_tree_state): Should fix column selection. Also fixed
+	some leaks.
+
+2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/procdialogs.c: (procdialog_create_preferences_dialog): Fixed spin
 	button value for update_interval.
 
